--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.h2.console.enabled=true
 #Username to database
 spring.datasource.username=sa
 # URL to database (~ [tilde] means, you can find it in your root folder)
-spring.datasource.url=jdbc:h2:~/fitness
-spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:~/fitness;AUTO_SERVER=TRUE
+#spring.sql.init.mode=always
